# modus-querens

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
modus_querens/: __init__.py  install.py
scripts/: bump-version.mjs
skills/modus-querens/: SKILL.md  reference.md  strategy-filebased.md
skills/modus-querens/scripts/: build_bm25.py  build_tree.py  corpus_utils.py  search_bm25.py
tests/: test_bm25.py
