[project]
name = "modus-querens"
version = "0.1.3"
description = "Install the Modus Querens agent skill for Cursor, Claude Code, and Codex"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
modus-querens = "modus_querens.install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modus_querens"]
