[project]
name = "modus-querens"
version = "0.1.34"
description = "Install the Modus Querens agent skill for Cursor, Claude Code, and Codex"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
bm25 = ["rank-bm25>=0.2.2"]
dev = ["pytest>=8.0", "rank-bm25>=0.2.2"]

[project.scripts]
modus-querens = "modus_querens.install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modus_querens"]
